--- a/app/src/main/res/layout/item_location.xml
+++ b/app/src/main/res/layout/item_location.xml
@@ -14,8 +14,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        app:cardCornerRadius="5dp"
+        android:layout_marginBottom="5dp"
         >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -31,7 +30,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@drawable/ic_round_person" />
+            android:src="@drawable/ic_round_person" />
 
         <TextView
             android:id="@+id/txtTitle"
