--- a/app/src/main/res/layout/item_location.xml
+++ b/app/src/main/res/layout/item_location.xml
@@ -8,7 +8,7 @@
     <data>
         <variable
             name="data"
-            type="com.baokiiin.mymap.Market" />
+            type="com.google.android.gms.maps.model.Marker" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -48,7 +48,7 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{data.description}"
+            android:text="@{data.snippet}"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="@+id/txtTitle"
             app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
